fix: hide progressive blur on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -890,6 +890,10 @@ a {
 }
 
 @media (max-width: 767px) {
+  .progressive-blur_wrap {
+    display: none;
+  }
+
   .hero__tab-wrap {
     position: fixed;
     top: auto;
